Fix top overflow when shifting up

--- a/src/styles/_diff.scss
+++ b/src/styles/_diff.scss
@@ -51,6 +51,7 @@
   height: calc(var(--diff-site-height) * 1px);
   box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
   background: var(--shade1);
+  overflow: hidden;
   transition: width $transition-duration;
 
   &--left {
